Sub tags filter working - filtered divs based on sub tags are raising

--- a/insights.html
+++ b/insights.html
@@ -117,19 +117,18 @@
 
                         <li class="item one ux-designer inhouse holder">
                            <a class="tag" id="js-tag typographer"></a>
-                           <a class="subtag inhouse" id="js-subtag inhouse"></a>
+                           <a class="subtag" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"></img>
-
                               </div>
                         </li>
 
                         <li class="item two typographer inhouse holder">
                            <a class="tag" id="js-tag typographer"></a>
-                           <a class="subtag inhouse" id="js-subtag inhouse"></a>
+                           <a class="subtag" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
@@ -140,7 +139,7 @@
                         </li>
                         <li class="item three service-designer agency holder">
                            <a class="tag " id="js-tag service-designer"></a>
-                           <a class="subtag agency" id="js-subtag agency"></a>
+                           <a class="subtag" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
