added animation to margin scroll

--- a/insights.html
+++ b/insights.html
@@ -111,7 +111,7 @@
                   </span>
             </div>
             <button id="rotateBtn"></button>
-            <div class="insights-content">
+            <div class="insights-content scroller-margin">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer inhouse holder">
                            <a class="tag" id="js-tag typographer"></a>
