insights images fixed

--- a/insights.html
+++ b/insights.html
@@ -114,8 +114,8 @@
             <div class="insights-content scroller-margin">
                   <ul class="item-wrapper">
                         <li class="item one ux-designer inhouse holder">
-                           <a class="tag" id="js-tag typographer"></a>
-                           <a class="subtag" id="js-subtag inhouse"></a>
+                           <a class="tag tagclick" id="js-tag typographer"></a>
+                           <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
@@ -125,8 +125,8 @@
                         </li>
 
                         <li class="item two typographer inhouse holder">
-                           <a class="tag" id="js-tag typographer"></a>
-                           <a class="subtag" id="js-subtag inhouse"></a>
+                           <a class="tag tagclick" id="js-tag typographer"></a>
+                           <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
