click sticky note to remove filter, only works once

--- a/insights.html
+++ b/insights.html
@@ -122,6 +122,10 @@
                   <span class="paperclip">
                   </span>
             </div>
+            <div class="sub-sticky-note">
+                  <span class="paperclip">
+                  </span>
+            </div>
             <button id="rotateBtn"></button>
             <div class="insights-content scroller-margin">
                   <ul class="item-wrapper">
@@ -148,8 +152,8 @@
                               </div>
                         </li>
                         <li class="item three service-designer agency holder">
-                           <a class="tag " id="js-tag service-designer"></a>
-                           <a class="subtag" id="js-subtag agency"></a>
+                           <a class="tag  tagclick" id="js-tag service-designer"></a>
+                           <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -160,8 +164,8 @@
                               </div>
                         </li>
                         <li class="item four ux-designer freelance holder">
-                              <a class="tag " id="js-tag ux-designer"></a>
-                              <a class="subtag" id="js-subtag freelance"></a>
+                              <a class="tag  tagclick" id="js-tag ux-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -174,8 +178,8 @@
 
                         </li>
                         <li class="item five service-designer inhouse holder">
-                              <a class="tag " id="js-tag ux-designer"></a>
-                              <a class="subtag" id="js-subtag freelance"></a>
+                              <a class="tag tagclick" id="js-tag ux-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -187,8 +191,8 @@
                               </div>
                         </li>
                         <li class="item six ux-designer agency holder">
-                              <a class="tag" id="js-tag ux-designer"></a>
-                              <a class="subtag" id="js-subtag agency"></a>
+                              <a class="tag tagclick" id="js-tag ux-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -200,8 +204,8 @@
                               </div>
                         </li>
                         <li class="item seven service-designer freelance holder">
-                              <a class="tag" id="js-tag service-designer"></a>
-                              <a class="subtag" id="js-subtag freelance"></a>
+                              <a class="tag tagclick" id="js-tag service-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
