grid css changes
i was accidentally doing the grid while zoomed out to like 20% so i was making everything massive hahaha

--- a/grid.html
+++ b/grid.html
@@ -20,6 +20,28 @@
 </head>
 
 <body>
+   <!-- Navigation -->
+   <div class="navbar navbar-fixed-top main">
+      <ul class="nav nav-stacked flex-column">
+         <li class="nav-item top-bar ">
+            <a class="rules nav-link" href="index.html">
+               <i class="arrow" id="js-arrow"></i>Rules
+            </a>
+         </li>
+         <li class="nav-item top-bar">
+            <a class="insights active nav-link" href="insights.html">
+               <i class="arrow" id="js-arrow"></i>Insights
+            </a>
+         </li>
+      </ul>
+   </div>
+
+   <div class="navbar navbar-fixed-top right logo">
+      <ul class="nav nav-stacked flex-column ">
+         <li class="nav-item insight">Insight.</li>
+         <li class="nav-item year">2018</li>
+      </ul>
+   </div>
    <!-- main grid -->
    <div class="grid">
    </div>
