--- a/grid.html
+++ b/grid.html
@@ -51,6 +51,7 @@
    <script src="js/jquery/jquery.slim.min.js"></script>
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
    <script src="js/grid.js"></script>
+   <script src="js/script.js"></script>
 
 
 </body>
