added side vignette to grid

--- a/grid.html
+++ b/grid.html
@@ -44,6 +44,8 @@
    </div>
    <!-- main grid -->
    <div class="grid">
+      <div class="left-shadow"></div>
+      <div class="right-shadow"></div>
    </div>
 
    <!-- Bootstrap core JavaScript fontawesome-->
