dynamic breadcrumbs onclick

--- a/grid.html
+++ b/grid.html
@@ -32,6 +32,8 @@
             <a class="insights active nav-link" href="insights.html">
                <i class="arrow" id="js-arrow"></i>Insights
             </a>
+            <div class="grid-breadcrumb"> <i class="arrow" id="js-arrow"></i><span class="grid-breadcrumb-text"></span>
+            </div>
          </li>
       </ul>
    </div>
