--- a/grid.html
+++ b/grid.html
@@ -42,6 +42,8 @@
          <li class="nav-item year">2018</li>
       </ul>
    </div>
+
+
    <!-- main grid -->
    <div class="grid">
       <div class="left-shadow"></div>
@@ -50,7 +52,7 @@
 
    <!-- Bootstrap core JavaScript fontawesome-->
    <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
-   <script src="js/jquery/jquery.slim.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
    <script src="js/grid.js"></script>
    <script src="js/script.js"></script>
