link index designers to insights + tag
it works but it goes to the page and just a tag there? because no guideline has been selected

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
             <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Designers </a>
                <ul class="nested-list">
-                  <li><span class="number">1</span><a>videographer</a></li>
-                  <li><span class="number">3</span><a>service designers</a></li>
-                  <li><span class="number">1</span><a>typgrapher</a></li>
-                  <li><span class="number">1</span><a>illustrator</a></li>
-                  <li><span class="number">3</span><a>user experience</a></li>
+                  <li><span class="number">1</span><a href="insights.html?designer=creative">videographer</a></li>
+                  <li><span class="number">3</span><a href="insights.html?designer=service-designer">service
+                        designers</a></li>
+                  <li><span class="number">1</span><a href="insights.html?designer=typographer">typographer</a></li>
+                  <li><span class="number">1</span><a href="insights.html?designer=creative">illustrator</a></li>
+                  <li><span class="number">3</span><a href="insights.html?designer=ux-designer">user experience</a>
+                  </li>
                </ul>
             </li>
             <li class="nav-item index"><a class=" nav-link">
