add shuffle pics to grid

--- a/grid.html
+++ b/grid.html
@@ -15,8 +15,6 @@
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
    <link rel="stylesheet" href="css/nav.css">
    <link rel="stylesheet" href="css/grid.css">
-
-
 </head>
 
 <body>
@@ -47,8 +45,11 @@
    <!-- main grid -->
    <div class="grid">
       <div class="left-shadow"></div>
-      <div class="right-shadow"></div>
+      <div class="right-shadow">
+      </div>
    </div>
+   <button id="rotateBtn"></button>
+
 
    <!-- Bootstrap core JavaScript fontawesome-->
    <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
