--- a/insights.html
+++ b/insights.html
@@ -246,7 +246,7 @@
       </div>
       <!-- Bootstrap core JavaScript fontawesome-->
       <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
-      <script src="js/jquery/jquery.slim.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
       <script src="js/jquery/bootstrap.bundle.min.js"></script>
 
       <!-- custom javascript -->
