--- a/insights.html
+++ b/insights.html
@@ -45,7 +45,7 @@
       </div>
       <!-- Page Content -->
       <div class="container">
-            <div class="row insights-titles animsition-overlay" data-animsition-overlay="true">
+            <div class="row insights-titles animsition">
                   <ul class="nav parent">
                         <li id="0" class="nav-item active-guideline"><a class="nav-link active-guideline-link">
                                     <i class="arrow rotate"></i><span
