--- a/insights.html
+++ b/insights.html
@@ -54,67 +54,67 @@
                         <li id="1" class="nav-item guideline "><a class=" nav-link animsition-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
-                        <li id="2" class="nav-item guideline "><a class=" nav-link animsition-link">
+                        <li id="2" class="nav-item guideline "><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>What I miss most about studying</a>
                         </li>
-                        <li id="3" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="3" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>I'm interupted by</a>
                         </li>
-                        <li id="4" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="4" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>Most helpful designer 'tool'</a>
                         </li>
-                        <li id="5" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="5" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>My shoes I wear most often to work</a>
                         </li>
-                        <li id="6" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="6" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>My favourite distraction in the workplace</a>
                         </li>
-                        <li id="7" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="7" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>I hate it when</a>
                         </li>
-                        <li id="8" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="8" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>How I fill my time post work</a>
                         </li>
-                        <li id="9" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="9" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>I feel supported when</a>
                         </li>
-                        <li id="10" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="10" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>It's difficult when my client</a>
                         </li>
-                        <li id="11" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="11" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>To de-stress I</a>
                         </li>
-                        <li id="12" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="12" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>My favourite project I've worked on</a>
                         </li>
-                        <li id="13" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="13" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>What took me the longest today was</a>
                         </li>
-                        <li id="14" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="14" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>A moment of eureka</a>
                         </li>
-                        <li id="15" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="15" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>A moment I feel bummed out</a>
                         </li>
-                        <li id="16" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="16" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>Most reocurring issue this week</a>
                         </li>
-                        <li id="17" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="17" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>My workplace culture</a>
                         </li>
-                        <li id="18" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="18" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>What limits my creative freedom</a>
                         </li>
-                        <li id="19" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="19" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>My relationship with my client</a>
                         </li>
-                        <li id="20" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="20" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>The jobs that aren't in my job description</a>
                         </li>
-                        <li id="21" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="21" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>Project progress this week</a>
                         </li>
-                        <li id="22" class="nav-item guideline"><a class=" nav-link animsition-link">
+                        <li id="22" class="nav-item guideline"><a class=" nav-link animsition-links">
                                     <i class="arrow rotate"></i>Most crucial thing I've learnt to adjust to</a>
                         </li>
                   </ul>
