--- a/grid.html
+++ b/grid.html
@@ -11,8 +11,7 @@
    <title>Insight</title>
 
    <!--CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
    <link rel="stylesheet" href="css/nav.css">
    <link rel="stylesheet" href="css/grid.css">
 </head>
@@ -60,10 +59,7 @@
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
    <script src="js/grid.js"></script>
    <script src="js/script.js"></script>
-   <script src="js/yall.min.js"></script>
-   <script>
-      document.addEventListener("DOMContentLoaded", yall);
-   </script>
+
 
 </body>
 
