--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
    <!-- Page Content -->
    <div class="container">
       <div class="row">
-         <!--can just add word 'autoplay' to this but maybe do it later so its not annoying when in dev-->
-         <video preload="" controls="controls" width="100%" height="100%">
+         <video autoplay preload="" controls="controls" width="100%" height="100%">
             <source src="assets/vid/main.mp4" />
          </video>
       </div>
