--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
    <!-- Bootstrap core JavaScript fontawesome-->
    <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
-   <script src="js/jquery/jquery.slim.min.js"></script>
+   <script src="js/jquery/jquery.min.js"></script>
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
    <script src="js/script.js"></script>
 
