--- a/insights.html
+++ b/insights.html
@@ -13,10 +13,11 @@
       <!--CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
             integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-      <link rel="stylesheet" href="../dist/css/animsition.min.css">
+      <link rel="stylesheet" href="../dist/css/animation.min.css">
       <link rel="stylesheet" href="css/nav.css">
       <link rel="stylesheet" href="css/insights.css">
       <link rel="stylesheet" href="css/insightsSlider.css">
+      <link rel="stylesheet" href="css/insightsSliderMobile.css">
 
 </head>
 
@@ -45,76 +46,76 @@
       </div>
       <!-- Page Content -->
       <div class="container">
-         <div class="row insights-titles animsition-overlay" data-animsition-overlay="true">
+            <div class="row insights-titles animation-overlay" data-animation-overlay="true">
                   <ul class="nav parent">
                         <li id="0" class="nav-item active-guideline"><a class="nav-link active-guideline-link">
                                     <i class="arrow rotate"></i><span
                                           class="active-guideline-link-text">&nbsp;</span></a>
                         </li>
-                        <li id="1" class="nav-item guideline "><a class=" nav-link animsition-link">
+                        <li id="1" class="nav-item guideline "><a class=" nav-link animation-link">
                                     <i class="arrow rotate"></i>First thing I do to start a day of designing</a>
                         </li>
-                        <li id="2" class="nav-item guideline "><a class=" nav-link animsition-links">
+                        <li id="2" class="nav-item guideline "><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>What I miss most about studying</a>
                         </li>
-                        <li id="3" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="3" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>I'm interupted by</a>
                         </li>
-                        <li id="4" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="4" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>Most helpful designer 'tool'</a>
                         </li>
-                        <li id="5" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="5" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>My shoes I wear most often to work</a>
                         </li>
-                        <li id="6" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="6" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>My favourite distraction in the workplace</a>
                         </li>
-                        <li id="7" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="7" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>I hate it when</a>
                         </li>
-                        <li id="8" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="8" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>How I fill my time post work</a>
                         </li>
-                        <li id="9" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="9" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>I feel supported when</a>
                         </li>
-                        <li id="10" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="10" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>It's difficult when my client</a>
                         </li>
-                        <li id="11" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="11" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>To de-stress I</a>
                         </li>
-                        <li id="12" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="12" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>My favourite project I've worked on</a>
                         </li>
-                        <li id="13" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="13" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>What took me the longest today was</a>
                         </li>
-                        <li id="14" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="14" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>A moment of eureka</a>
                         </li>
-                        <li id="15" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="15" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>A moment I feel bummed out</a>
                         </li>
-                        <li id="16" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="16" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>Most reocurring issue this week</a>
                         </li>
-                        <li id="17" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="17" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>My workplace culture</a>
                         </li>
-                        <li id="18" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="18" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>What limits my creative freedom</a>
                         </li>
-                        <li id="19" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="19" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>My relationship with my client</a>
                         </li>
-                        <li id="20" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="20" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>The jobs that aren't in my job description</a>
                         </li>
-                        <li id="21" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="21" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>Project progress this week</a>
                         </li>
-                        <li id="22" class="nav-item guideline"><a class=" nav-link animsition-links">
+                        <li id="22" class="nav-item guideline"><a class=" nav-link animation-links">
                                     <i class="arrow rotate"></i>Most crucial thing I've learnt to adjust to</a>
                         </li>
                   </ul>
@@ -134,10 +135,10 @@
                               <a class="tag tagclick" id="js-tag typographer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal"></img>
+                                    <img class="journal" onError="$(this).hide();" />
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph"></img>
+                                    <img class="photograph" onError="$(this).hide();" />
                               </div>
                         </li>
 
@@ -145,10 +146,10 @@
                               <a class="tag tagclick" id="js-tag typographer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal"></img>
+                                    <img class="journal" onerror="$(this).hide()"></img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph" onError="$(this).hide();">
                                     </img>
                               </div>
                         </li>
@@ -156,11 +157,11 @@
                               <a class="tag  tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal onError=" $(this).hide();"">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph"> </img>
+                                    <img class="photograph" onError="$(this).hide();"> </img>
 
                               </div>
                         </li>
@@ -168,11 +169,11 @@
                               <a class="tag  tagclick" id="js-tag ux-designer"></a>
                               <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal" onError="$(this).hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph " onError="$(this).hide();">
                                     </img>
 
                               </div>
@@ -182,11 +183,10 @@
                               <a class="tag tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal">
-                                    </img>
+                                    <img class="journal" onError="$(this).hide();"> </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph" onError="$(this).hide();">
                                     </img>
 
                               </div>
@@ -195,11 +195,11 @@
                               <a class="tag tagclick" id="js-tag ux-designer"></a>
                               <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal" onError="$(this).hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph " onError="$(this).hide();">
                                     </img>
 
                               </div>
@@ -208,11 +208,11 @@
                               <a class="tag tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal" onError="$(this).hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph" onError="$(this).hide();">
                                     </img>
 
                               </div>
@@ -221,11 +221,11 @@
                               <a class="tag" id="js-tag typographer"></a>
                               <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal" onError="$(this).hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph" onError="$(this).hide();">
                                     </img>
 
                               </div>
@@ -234,11 +234,11 @@
                               <a class="tag" id="js-tag creative"></a>
                               <a class="subtag" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal">
+                                    <img class="journal" onError="$(this).hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph">
+                                    <img class="photograph" onError="$(this).hide();">
                                     </img>
                               </div>
                         </li>
@@ -247,13 +247,12 @@
       </div>
       <!-- Bootstrap core JavaScript fontawesome-->
       <script src="https://use.fontawesome.com/5afd3d6e40.js"></script>
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-      <script src="js/jquery/bootstrap.bundle.min.js"></script>
-      <script src="../dist/js/animsition.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
       <!-- custom javascript -->
       <script src="js/script.js"></script>
-      <script src="js/images.js"></script>
+      <script src="js/insightsSlider.js"></script>
 </body>
 
 </html>
