small fixes for grid

--- a/insights.html
+++ b/insights.html
@@ -13,7 +13,7 @@
       <!--CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
             integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-      <link rel="stylesheet" href="../dist/css/animation.min.css">
+
       <link rel="stylesheet" href="css/nav.css">
       <link rel="stylesheet" href="css/insights.css">
       <link rel="stylesheet" href="css/insightsSlider.css">
@@ -157,10 +157,10 @@
                               <a class="tag  tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal onError=" $(this).hide();"">
+                                    <img class="journal" onError=" $(this).hide();"">
                                     </img>
                               </div>
-                              <div class="photograph-wrapper current">
+                              <div class=" photograph-wrapper current">
                                     <img class="photograph" onError="$(this).hide();"> </img>
 
                               </div>
