--- a/grid.html
+++ b/grid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+   <link rel="shortcut icon" type="image/x-icon" href="assets/icons/favicon.png" />
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta name="description" content="">
@@ -58,6 +58,7 @@
    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
    <script src="js/jquery/bootstrap.bundle.min.js"></script>
+   <script src="js/jquery/jquery.min.js"></script>
    <script src="js/grid.js"></script>
    <script src="js/script.js"></script>
    <script src="js/yall.min.js"></script>
