--- a/insights.html
+++ b/insights.html
@@ -135,10 +135,10 @@
                               <a class="tag tagclick" id="js-tag typographer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();" />
+                                    <img class="journal" />
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();" />
+                                    <img class="photograph" />
                               </div>
                         </li>
 
