fix up tags for slider in order

--- a/insights.html
+++ b/insights.html
@@ -131,9 +131,9 @@
             <button id="rotateBtn"></button>
             <div class="insights-content scroller-margin">
                   <ul class="item-wrapper">
-                        <li class="item one ux-designer inhouse holder">
-                              <a class="tag tagclick" id="js-tag typographer"></a>
-                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
+                        <li class="item one ux-designer agency holder">
+                              <a class="tag tagclick" id="js-tag ux-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" />
                               </div>
@@ -142,8 +142,8 @@
                               </div>
                         </li>
 
-                        <li class="item two typographer inhouse holder">
-                              <a class="tag tagclick" id="js-tag typographer"></a>
+                        <li class="item two videographer inhouse holder">
+                              <a class="tag tagclick" id="js-tag videographer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onerror="$(this).hide()"></img>
@@ -165,9 +165,9 @@
 
                               </div>
                         </li>
-                        <li class="item four ux-designer freelance holder">
+                        <li class="item four ux-designer inhouse holder">
                               <a class="tag  tagclick" id="js-tag ux-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag freelance"></a>
+                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
                                     </img>
@@ -191,9 +191,9 @@
 
                               </div>
                         </li>
-                        <li class="item six ux-designer agency holder">
-                              <a class="tag tagclick" id="js-tag ux-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag agency"></a>
+                        <li class="item six service-designer inhouse holder">
+                              <a class="tag tagclick" id="js-tag service-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
                                     </img>
@@ -204,9 +204,9 @@
 
                               </div>
                         </li>
-                        <li class="item seven service-designer freelance holder">
-                              <a class="tag tagclick" id="js-tag service-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag freelance"></a>
+                        <li class="item seven ux-designer inhouse holder">
+                              <a class="tag tagclick" id="js-tag ux-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
                                     </img>
@@ -217,8 +217,8 @@
 
                               </div>
                         </li>
-                        <li class="item eight typographer inhouse holder">
-                              <a class="tag" id="js-tag typographer"></a>
+                        <li class="item eight service-designer inhouse holder">
+                              <a class="tag" id="js-tag service-designer"></a>
                               <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
@@ -230,9 +230,21 @@
 
                               </div>
                         </li>
-                        <li class="item nine creative agency holder">
+                        <li class="item nine typographer freelance holder">
+                              <a class="tag" id="js-tag typographer"></a>
+                              <a class="subtag" id="js-subtag freelance"></a>
+                              <div class="journal-wrapper">
+                                    <img class="journal" onError="$(this).hide();">
+                                    </img>
+                              </div>
+                              <div class="photograph-wrapper current">
+                                    <img class="photograph" onError="$(this).hide();">
+                                    </img>
+                              </div>
+                        </li>
+                        <li class="item ten creative freelance holder">
                               <a class="tag" id="js-tag creative"></a>
-                              <a class="subtag" id="js-subtag agency"></a>
+                              <a class="subtag" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
                                     </img>
