--- a/insights.html
+++ b/insights.html
@@ -142,8 +142,8 @@
                               </div>
                         </li>
 
-                        <li class="item two videographer inhouse holder">
-                              <a class="tag tagclick" id="js-tag videographer"></a>
+                        <li class="item two creative inhouse holder">
+                              <a class="tag tagclick" id="js-tag creative"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onerror="$(this).hide()"></img>
