--- a/insights.html
+++ b/insights.html
@@ -199,7 +199,7 @@
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph " onError="$(this).hide();">
+                                    <img class="photograph" >
                                     </img>
 
                               </div>
