--- a/insights.html
+++ b/insights.html
@@ -250,7 +250,7 @@
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph">
                                     </img>
                               </div>
                         </li>
