--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row text ">
          <h3>Insight explores the trajectory between design education and professional practice.<br /><br />
             This platform serves as a collaborative collection of photographic and written insights', that document
-            some of the underlying social factors shaping the design industry today, by the people that make it.</p>
+            some of the underlying social factors shaping the design industry today, by the people that make it.</h3>
       </div>
       <div class="row rules text">
          <ul class="nav">
